@@ -1,3 +1,8 @@
+2008-04-09  Johan Dahlin  <johan@gnome.org>
+
+	* kiwi/ui/objectlist.py (ObjectList._setup_columns): Fix error message
+	so it actually shows something useful
+
 2008-04-08  Johan Dahlin  <jdahlin@async.com.br>
 
 	* kiwi/ui/listdialog.py:
